--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>fr.soleil</groupId>
-        <artifactId>super-pom-C-CPP-device</artifactId>
-        <version>RELEASE</version>
-    </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>fr.soleil</groupId>
+    <artifactId>super-pom-C-CPP-device</artifactId>
+    <version>RELEASE</version>
+  </parent>
    
-    <groupId>fr.soleil.device</groupId>
-    <artifactId>ModbusComposer-${aol}-${mode}</artifactId>
-    <version>1.1.1</version>
-    <packaging>nar</packaging>
-    <name>ModbusComposer</name>
-    <description>ModbusComposer device</description>
+  <groupId>fr.soleil.device</groupId>
+  <artifactId>ModbusComposer-${aol}-${mode}</artifactId>
+  <version>1.1.2</version>
+  <packaging>nar</packaging>
+  <name>ModbusComposer</name>
+  <description>ModbusComposer device</description>
    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.freehep</groupId>
-                <artifactId>freehep-nar-plugin</artifactId>
-                <configuration>
-                    <cpp>
-                        <defines>
-                            <define>LOG4TANGO_HAVE_INT64_T</define>
-                            <define>PROJECT_NAME=${project.name}</define>
-                            <define>PROJECT_VERSION=${project.version}</define>
-                        </defines>
-                    </cpp>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.freehep</groupId>
+        <artifactId>freehep-nar-plugin</artifactId>
+        <configuration>
+          <cpp>
+            <defines>
+              <define>LOG4TANGO_HAVE_INT64_T</define>
+              <define>PROJECT_NAME=${project.name}</define>
+              <define>PROJECT_VERSION=${project.version}</define>
+            </defines>
+          </cpp>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 	<dependencies>
+    <dependency>
+      <groupId>fr.soleil.lib</groupId>
+      <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>fr.soleil.lib</groupId>
+      <artifactId>YAT4Tango-${aol}-${library}-${mode}</artifactId>
+    </dependency>
 	</dependencies>
 
 	<scm>
-       <connection>${scm.connection.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</connection>
-       <developerConnection>${scm.developerConnection.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</developerConnection>
-       <url>${scm.url.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</url>
-    </scm>
+    <connection>${scm.connection.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</connection>
+    <developerConnection>${scm.developerConnection.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</developerConnection>
+    <url>${scm.url.svn.tango-ds}/DeviceClasses/Calculation/ModbusComposer/trunk</url>
+  </scm>
 
-   <developers>
-       <developer>
-           <id>elattaoui</id>
-           <name>elattaoui</name>
-           <url>http://controle/</url>
-           <organization>Synchrotron Soleil</organization>
-           <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
-           <roles>
-               <role>manager</role>
-           </roles>
-           <timezone>1</timezone>
-       </developer>
+  <developers>
+    <developer>
+      <id>elattaoui</id>
+      <name>elattaoui</name>
+      <url>http://controle/</url>
+      <organization>Synchrotron Soleil</organization>
+      <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
+      <roles>
+        <role>manager</role>
+      </roles>
+      <timezone>1</timezone>
+    </developer>
    </developers>
 
 </project>
