--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
    
   <groupId>fr.soleil.device</groupId>
   <artifactId>ModbusComposer-${aol}-${mode}</artifactId>
-  <version>1.1.2</version>
+  <version>1.1.3</version>
   <packaging>nar</packaging>
   <name>ModbusComposer</name>
   <description>ModbusComposer device</description>
@@ -26,6 +26,9 @@
               <define>PROJECT_NAME=${project.name}</define>
               <define>PROJECT_VERSION=${project.version}</define>
             </defines>
+            <excludes>
+              <exclude>**/MultiClassesFactory.cpp</exclude>
+            </excludes>
           </cpp>
         </configuration>
       </plugin>
